--- a/source/styles/_variaveis.scss
+++ b/source/styles/_variaveis.scss
@@ -1,3 +1,13 @@
-$BackgroundColor: #111; 
-$TextColor: #fff; 
-$PrimaryColor: #981e21; 
+// Colors
+$BackgroundColor: #111;
+$TextColor: #fff;
+$PrimaryColor: #981e21;
+
+
+// Fonts
+
+$PrimaryFont: 'Roboto',
+sans-serif;
+
+$SecundaryFont: 'Tilt Prism',
+cursive;
