--- a/source/styles/_curious.scss
+++ b/source/styles/_curious.scss
@@ -1,75 +1,94 @@
-@use 'variaveis'; 
-.curious{
+@use 'variaveis';
+
+.curious {
     min-height: 100vh;
     width: 100%;
     padding: 7vw;
 
-    h3{
+
+    h3 {
         text-align: center;
-        color: variaveis.$PrimaryColor; 
-        font-size: 55px;
+        color: variaveis.$PrimaryColor;
+        text-transform: uppercase;
 
-    @media screen and (max-width: 768px){
-        font-size: 23px;
-        margin-top: 50px;
+        @media screen and (max-width: 768px) {
+            font-size: 35px;
+            margin-top: 40px;
+            margin-bottom: 20px;
+        }
+
+
+        @media(min-width: 769px) and (max-width: 1023px) {
+            font-size: 50px;
+            margin-top: 50px;
+        }
+
+        @media screen and (min-width: 1024px) {
+            font-size: 55px;
+            margin-top: 5px;
+            margin-bottom: 10px;
+
+        }
     }
 
-    
-    @media(min-width: 769px) and (max-width: 960px){
-        font-size: 50px;
-        margin-top: 50px;
-    }
-    }
-    &__questions{
+    &__questions {
         display: flex;
         flex-direction: column;
-        &__item{
+
+        &__item {
             justify-content: center;
-            margin: 20px; 
             background-color: #fff;
             text-decoration: none;
             color: #000;
             text-align: center;
-            font-size: 40px;
             list-style: none;
             padding: 20px;
-            
-    @media screen and (max-width: 768px){
-        font-size: 20px;
-        margin: 10px;
-    }
 
-    @media(min-width: 769px) and (max-width: 960px){
-        font-size: 35px;
-        margin: 20px;
-    }
+            @media screen and (max-width: 768px) {
+                font-size: 20px;
+                margin: 5px;
+                padding: 15px;
+            }
 
-            &__question{
+            @media(min-width: 769px) and (max-width: 1023px) {
+                font-size: 35px;
+                margin: 20px;
+            }
+
+            @media screen and (min-width: 1024px) {
+                font-size: 30px;
+                margin: 10px;
+            }
+
+            &__question {
                 cursor: pointer;
             }
-            
-            &__answer{
-                height: 0; 
-                overflow: hidden; 
-                padding: 0 24px; 
+
+            &__answer {
+                height: 0;
+                overflow: hidden;
+                padding: 0;
+                font-size: 5px;
             }
 
-            &--is-open{
+            &--is-open {
                 background-image: url('../../images/deadpoolFace.jpg');
                 background-repeat: no-repeat;
                 background-size: cover;
                 background-position: 50% 40%;
-                transition: all .5s ease; 
+                transition: all .5s ease;
                 color: #fff;
-                .curious__questions__item__question{
-                    transition: all .5s ease; 
+
+                .curious__questions__item__question {
+                    transition: all .5s ease;
                     border-bottom: 2px solid variaveis.$PrimaryColor;
                 }
-                .curious__questions__item__answer{
+
+                .curious__questions__item__answer {
                     text-shadow: 1px 1px 2px #000;
                     height: auto;
-                    padding-bottom: 24px; 
-                    transition: all .5s ease; 
+                    padding-bottom: 24px;
+                    transition: all .5s ease;
                 }
             }
         }
