--- a/source/styles/_hero.scss
+++ b/source/styles/_hero.scss
@@ -1,66 +1,96 @@
-@use 'variaveis'; 
-.hero{
-    min-width: 80vw;
+@use 'variaveis';
+
+.hero {
+    min-width: 70vw;
     min-height: 55vw;
     background-image: url('../../images/deadpoolWallpaper.jpg');
     background-repeat: no-repeat;
     background-size: contain;
     padding: 5vw;
-    
-    @media screen and (max-width: 768px){
+
+    @media screen and (max-width: 768px) {
         min-height: 80vw;
         background-position: 5vh;
     }
-    
-    @media(min-width: 769px) and (max-width: 960px){
+
+    @media(min-width: 769px) and (max-width: 1023px) {
         height: 76vh;
         background-position: 1vh;
     }
 
-    &__content{
-        color: #fff; 
-        display: flex; 
+    @media screen and (min-width: 1024px) {
+        min-height: auto;
+        background-size: cover;
+        background-position: 9vh;
+    }
+
+
+    &__content {
+        color: #fff;
+        display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: center;
         height: 80vh;
         text-align: center;
-        @media screen and (max-width: 768px){
-            max-width: 400px;
-            
-        }
-    @media(min-width: 769px) and (max-width: 960px){
-        max-width: 600px;
-        margin: 0 auto;
-    }
 
-        &__brand{
+        @media screen and (max-width: 768px) {
+            max-width: 400px;
+
+        }
+
+        @media(min-width: 769px) and (max-width: 1023px) {
+            max-width: 600px;
+            margin: 0 auto;
+        }
+
+        @media screen and (min-width: 1024px) {
+            max-width: 900px;
+        }
+
+
+        &__brand {
             font-size: 90px;
             color: variaveis.$PrimaryColor;
             margin-bottom: 15px;
             text-transform: uppercase;
+            font-family: variaveis.$SecundaryFont;
         }
 
-        blockquote{
+        blockquote {
             font-size: 50px;
         }
 
-        @media screen and (max-width: 768px){
-            &__brand{
+        @media screen and (max-width: 768px) {
+            &__brand {
                 font-size: 24px;
             }
-            blockquote{
+
+            blockquote {
                 font-size: 20px;
             }
         }
 
-        @media(min-width: 769px) and (max-width: 960px){
-            &__brand{
+        @media(min-width: 769px) and (max-width: 1023px) {
+            &__brand {
                 font-size: 60px;
             }
-            blockquote{
+
+            blockquote {
                 font-size: 45px;
             }
         }
+
+        @media screen and (min-width: 1024px) {
+            &__brand {
+                font-size: 90px;
+            }
+
+            blockquote {
+                font-size: 50px;
+                text-transform: capitalize;
+            }
+        }
+
     }
 }
