--- a/source/styles/_overview.scss
+++ b/source/styles/_overview.scss
@@ -1,136 +1,168 @@
-@use 'variaveis'; 
-.overview{
+@use 'variaveis';
+
+.overview {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     padding: 5vh;
-    background-image: url('../../images/deadpoolPerfil.jpg');
-    background-repeat: no-repeat; 
+    background-repeat: no-repeat;
     background-size: cover;
-    min-height: 100vh;
-    
-    @media screen and (max-width: 768px){
-        background-image: url('../../images/deadpoolfacemobile.jpg');
+    min-height: 80vh;
+    background-image: url('../../images/deadpoolfacemobile.jpg');
+
+    @media screen and (max-width: 768px) {
         background-size: contain;
     }
-    @media(min-width: 769px) and (max-width: 960px){
-        background-image: url('../../images/deadpoolfacemobile.jpg');
-        background-size: cover;
+
+    @media screen and (min-width: 1024px) {
+        background-image: url('../../images/deadpoolPerfil.jpg');
+        padding: 100px;
     }
 
 
 
-    li{
+    li {
         list-style: none;
     }
 
-    &__content{
+    &__content {
         color: variaveis.$TextColor;
         display: flex;
-        font-size: 35px;
 
-        @media screen and (max-width: 768px){
-        font-size: 15px;
-            
-        p{
-            max-height: 159px;
-            overflow-y: hidden;
-            display: pointer;
-        }
-        
-        }
 
-        @media(min-width: 769px) and (max-width: 960px){
-        font-size: 25px;
-            
-        p{
-            max-height: 180px;
-            overflow-y: hidden;
-            display: pointer; 
-        }
-        
-        }
+        @media screen and (max-width: 768px) {
+            font-size: smaller;
 
-        
-        &__text{
-            display: inline-block;
-            margin: auto 100px;
-
-            @media screen and (max-width: 768px){
-                margin: auto 10px;
-                ul{
-                    display: block;
-                }
+            p {
+                max-height: 157px;
+                overflow-y: scroll;
+                cursor: pointer;
             }
-            @media(min-width: 769px) and (max-width: 960px){
-                margin: auto 8px;
-                ul{
-                    display: block;
+        }
+
+        @media(min-width: 769px) and (max-width: 1023px) {
+            display: block;
+            font-size: 25px;
+
+            &__text {
+                text-align: center;
+
+                li {
+                    display: inline-block;
                 }
             }
         }
-        
+
+        @media screen and (min-width: 1024px) {
+            font-size: 20px;
+            cursor: pointer;
+        }
+
+
+
+        &__text {
+            @media screen and (max-width: 768px) {
+                margin: 10px auto;
+
+                li {
+                    display: block;
+                }
+            }
+
+            @media(min-width: 769px) and (max-width: 1023px) {
+                margin: 10px auto;
+                text-align: center;
+
+                li {
+                    display: inline-block;
+                }
+            }
+
+            @media screen and (min-width: 1024px) {
+                margin: auto 100px;
+
+                li {
+                    display: inline-block;
+                }
+            }
+        }
     }
-    &__list{
-        display: block;
-        margin: 40px 0;
-        &__item{
-            display: inline-block;
-            font-size: 30px;
-            margin: 20px;
-            max-width: 200px;
-            max-height: 200px;
-            height: 100%;
-            text-align: center;
 
-            @media screen and (max-width: 768px){
-                margin: 5px; 
-                font-size: 10px;
+    &__list {
+        margin: 25px 0;
+        text-align: center;
+
+        &__item {
+            display: inline-block;
+            max-width: 200px;
+            max-height: 100px;
+
+            @media screen and (max-width: 768px) {
+                margin: 5px;
+                font-size: 16px;
                 height: 10px;
-                }
-                
-                @media(min-width: 769px) and (max-width: 960px){
-                    margin: 5px; 
-                    font-size: 10px;
-                    height: 30px;
-                    }
-                    
-            a{
+            }
+
+            @media(min-width: 769px) and (max-width: 1023px) {
+                margin: 5px;
+                font-size: 25px;
+                height: 30px;
+            }
+
+            @media screen and (min-width: 1024px) {
+                font-size: 20px;
+                height: 100%;
+                margin: 20px;
+            }
+
+            a {
                 text-decoration: none;
                 color: #e6ddde;
             }
 
-            img{
+            img {
                 border-radius: 50%;
-                display: inline;
-                margin-bottom: 10px;
 
-                @media screen and (max-width: 768px){
-                  display: none;
-                  margin: 5px;
-                    }
-            @media(min-width: 769px) and (max-width: 960px){
-                display: none;
-                margin: 0;
-            }
+                @media screen and (max-width: 768px) {
+                    display: none;
+                    margin: 5px;
+                }
+
+                @media(min-width: 769px) and (max-width: 1023px) {
+                    display: none;
+                    margin: 0;
+                }
+
+                @media screen and (min-width: 1024px) {
+                    display: inline;
+                    margin-bottom: 7px;
+                }
 
             }
         }
 
     }
-    &__title{
+
+    &__title {
         color: #fff;
         display: block;
         font-size: 40px;
         text-align: center;
-    @media screen and (max-width: 768px){
-        font-size: 20px;
-    }
-    @media(min-width: 769px) and (max-width: 960px){
-        font-size: 40px;
-        top: 0;
-    }
+
+        @media screen and (max-width: 768px) {
+            font-size: 24px;
+        }
+
+        @media(min-width: 769px) and (max-width: 960px) {
+            font-size: 40px;
+            top: 0;
+        }
+
+        @media screen and (min-width: 1024px) {
+            font-size: 30px;
+            margin-top: 40px;
+        }
 
     }
 
