--- a/source/styles/_scenes.scss
+++ b/source/styles/_scenes.scss
@@ -1,153 +1,201 @@
-@use 'variaveis'; 
-.scenes{
+@use 'variaveis';
+
+.scenes {
     text-align: center;
     display: flex;
     flex-direction: column;
     justify-content: center;
     padding: 10vh;
-    @media screen and (max-width: 768px){
-    padding: 0;
+
+    @media screen and (max-width: 768px) {
+        padding: 0;
     }
-    &__buttons{
-        button{
-            display:  inline-block;
+
+    &__buttons {
+        button {
+            display: inline-block;
             margin: 20px;
         }
 
-        @media screen and (max-width: 768px){
+        @media screen and (max-width: 768px) {
             margin-top: 20px;
-            button{
+
+            button {
                 margin: 5px;
             }
         }
-        @media(min-width: 769px) and (max-width: 960px){
+
+        @media(min-width: 769px) and (max-width: 1023px) {
             margin-top: 20px;
-            button{
+
+            button {
                 margin: 20px;
             }
-}
-        
+        }
+
+        @media screen and (min-width: 1024px) {
+            margin-top: 0px;
+
+            button {
+                margin: 5px;
+            }
+        }
+
     }
-    
-    &__title{
+
+    &__title {
         color: variaveis.$TextColor;
-        margin-bottom: 30px; 
+        margin-bottom: 30px;
         font-size: 80px;
         color: variaveis.$PrimaryColor;
+        text-transform: uppercase;
 
-        @media screen and (max-width: 768px){
+        @media screen and (max-width: 768px) {
             margin: 0;
             font-size: 20px;
         }
-        @media(min-width: 769px) and (max-width: 960px){
+
+        @media(min-width: 769px) and (max-width: 1023px) {
             margin: 0;
             font-size: 60px;
-}
-    }
-
-    
-
-    &__list{
-        display: none; 
-        transform: all .5s ease;
-        
-        &__placeholder{
-            display: grid;
-            grid-template-columns: repeat(3, 1fr); 
-
-            @media screen and (max-width: 768px){
-            grid-template-columns: repeat(2, 1fr); 
         }
-        @media(min-width: 769px) and (max-width: 960px){
-        grid-template-columns: repeat(2, 1fr); 
-    
+
+        @media screen and (min-width: 1024px) {
+            margin-bottom: 10px;
+            font-size: 60px;
+        }
+
     }
 
-            .hide{
-                display: none; 
+
+
+    &__list {
+        display: none;
+
+        &__placeholder {
+            display: grid;
+
+            @media screen and (max-width: 768px) {
+                grid-template-columns: repeat(2, 1fr);
             }
-        
-            &__item{
+
+            @media(min-width: 769px) and (max-width: 1023px) {
+                grid-template-columns: repeat(2, 1fr);
+            }
+
+            @media screen and (min-width: 1024px) {
+                grid-template-columns: repeat(3, 1fr);
+            }
+
+            .hide {
+                display: none;
+            }
+
+            &__item {
                 margin: 20px;
-                @media screen and (max-width: 768px){
-                    grid-template-columns: repeat(2, 1fr); 
+
+                @media (max-width: 768px) {
+                    grid-template-columns: repeat(2, 1fr);
                     margin: 5px;
                 }
-                @media(min-width: 769px) and (max-width: 960px){
-                    grid-template-columns: repeat(2, 1fr); 
+
+                @media (min-width: 769px) and (max-width: 1023px) {
+                    grid-template-columns: repeat(2, 1fr);
                     margin: 2px;
                 }
-    }
 
-                
-    
-            img{
+                @media (min-width: 1024px) {
+                    grid-template-columns: repeat(3, 1fr);
+                    margin: 15px;
+                }
+            }
+
+
+
+            img {
                 border-radius: 15px;
-                width: 400px; 
                 border: 4px solid transparent;
-                @media screen and (max-width: 768px){
+
+                @media screen and (max-width: 768px) {
                     width: 150px;
                     height: 90px;
+
+                    &:hover {
+                        border: transparent;
+                    }
                 }
-                @media(min-width: 769px) and (max-width: 960px){
+
+                @media (min-width: 769px) and (max-width: 1023px) {
                     width: 300px;
                     height: 150px;
-        }
-                &:hover{
-                    border-color: variaveis.$PrimaryColor;
+
+                    &:hover {
+                        border: transparent;
+                    }
+                }
+
+                @media screen and (min-width: 1024px) {
+                    width: 500px;
+                    height: 250px;
+
+                    &:hover {
+                        border-color: variaveis.$PrimaryColor;
+                    }
                 }
             }
-            }
-
         }
 
-        &--is-open{
+
+
+        &--is-open {
             display: grid;
-            grid-template-columns: repeat(3, 1fr);
-            @media screen and (max-width: 768px){
-                grid-template-columns: repeat(2, 1fr); 
+
+            @media screen and (max-width: 768px) {
+                grid-template-columns: repeat(2, 1fr);
             }
 
-                @media(min-width: 769px) and (max-width: 960px){
-                    grid-template-columns: repeat(2, 1fr); 
-        }
+            @media(min-width: 769px) and (max-width: 1023px) {
+                grid-template-columns: repeat(2, 1fr);
+            }
 
-        &__item{
-            margin: 20px;
-            img{
-                border-radius: 15px;
-                height: 250px; 
-                border: 4px solid transparent;
-                
-                @media screen and (max-width: 768px){
-                    width: 150px;
-                    height: 90px;
-                }
-                @media(min-width: 769px) and (max-width: 960px){
-                    width: 150px;
-                    height: 90px;
-        }
-                &:hover{
-                    border-color: variaveis.$PrimaryColor;
-                    
-                }
+            @media(min-width: 1024px) {
+                grid-template-columns: repeat(3, 1fr);
             }
         }
 
-        
     }
 
-    &__img{
-        width: 400px;
-        @media screen and (max-width: 768px){
+    &__img {
+        border-radius: 15px;
+        border: 4px solid transparent;
+
+        @media screen and (max-width: 768px) {
             width: 150px;
             height: 90px;
+
+            &:hover {
+                border-color: transparent;
+            }
         }
 
-        @media(min-width: 769px) and (max-width: 960px){
+        @media(min-width: 769px) and (max-width: 960px) {
             width: 150px;
             height: 90px;
-}
+
+            &:hover {
+                border-color: transparent;
+            }
+        }
+
+        @media screen and (min-width: 1024px) {
+            width: 500px;
+            height: 250px;
+            margin: 20px;
+
+            &:hover {
+                border-color: variaveis.$PrimaryColor;
+            }
+        }
     }
 
 }
