--- a/source/styles/_watch.scss
+++ b/source/styles/_watch.scss
@@ -1,43 +1,49 @@
-.watch{
+@use 'variaveis';
+
+.watch {
     min-height: 100vh;
-    background-image: url('../../images/deadpoolWatch.jpg');
     background-repeat: no-repeat;
-    background-size: cover;
     position: relative;
-    @media screen and (max-width: 768px){
+    background-size: cover;
+    background-image: url('../../images/deadpoolWatch.jpg');
+
+    @media screen and (max-width: 768px) {
         background-image: url('../../images/deadpoolmobilefacelogo.jpg');
         background-size: contain;
     }
 
-    @media(min-width: 769px) and (max-width: 960px){
-    }
-    
-    
-    &__container{
+    &__container {
         background-color: rgba(0, 0, 0, 0.307);
         height: 100vh;
-        display: flex; 
+        display: flex;
         align-items: center;
         justify-content: end;
     }
-    
-    &__callToAction{
+
+    &__callToAction {
         padding: 8vw;
 
-        h3{
-            font-size: 80px; 
-            color: #fff;
-            font-weight: bolder;
+        h3 {
+            color: variaveis.$TextColor;
+            font-family: variaveis.$SecundaryFont;
+            text-transform: uppercase;
 
-    @media screen and (max-width: 768px){
-        font-size: 40px;
-        text-align: center;
-    }
-    @media(min-width: 769px) and (max-width: 960px){
-        font-size: 80px;
-        text-align: center;
-    }
-    
+            @media screen and (max-width: 768px) {
+                font-size: 40px;
+                text-align: center;
+            }
+
+            @media(min-width: 769px) and (max-width: 1023px) {
+                font-size: 80px;
+                text-align: center;
+            }
+
+            @media screen and (min-width: 1024px) {
+                text-align: right;
+                font-size: 90px;
+                max-width: 900px;
+            }
+
         }
     }
 }
