--- a/source/styles/_curious.scss
+++ b/source/styles/_curious.scss
@@ -4,6 +4,7 @@
     min-height: 100vh;
     width: 100%;
     padding: 7vw;
+    overflow-y: hidden;
 
 
     h3 {
@@ -48,16 +49,29 @@
                 font-size: 20px;
                 margin: 5px;
                 padding: 15px;
+
+                &__answer {
+                    font-size: 5px;
+                }
             }
 
             @media(min-width: 769px) and (max-width: 1023px) {
                 font-size: 35px;
                 margin: 20px;
+
+                &__answer {
+                    font-size: 30px;
+                }
             }
 
             @media screen and (min-width: 1024px) {
                 font-size: 30px;
                 margin: 10px;
+
+                &__answer {
+                    font-size: 25px;
+                }
+
             }
 
             &__question {
@@ -68,7 +82,6 @@
                 height: 0;
                 overflow: hidden;
                 padding: 0;
-                font-size: 5px;
             }
 
             &--is-open {
@@ -93,4 +106,8 @@
             }
         }
     }
+}
+
+.curious::-webkit-scrollbar {
+    display: none;
 }
